--- a/source/libs/Makefile.in
+++ b/source/libs/Makefile.in
@@ -210,8 +210,8 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-SUBDIRS = triangul sdlmm paragui loki @revellib@ @SdlSoundDir@ @LIBBZ2@ 
-DIST_SUBDIRS = triangul sdlmm paragui loki revel sdl_sound 
+SUBDIRS = triangul sdlmm paragui loki-0.1.6 @revellib@ @SdlSoundDir@ @LIBBZ2@ 
+DIST_SUBDIRS = triangul sdlmm paragui loki-0.1.6 revel sdl_sound 
 EXTRA_DIST = $(srcdir)/rand/*
 all: all-recursive
 
