--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc,2.1.3.6)
+AC_INIT(asc,2.1.4.2)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -88,7 +88,7 @@ AC_LANG_RESTORE
 
 
 CFLAGS="$CFLAGS -D_UNIX_ -D_SDL_ "
-CXXFLAGS="$CXXFLAGS -Wno-sign-compare -funsigned-char -D_UNIX_ -D_SDL_ "
+CXXFLAGS="$CXXFLAGS -Wno-sign-compare -funsigned-char -D_UNIX_ -D_SDL_"
 
 
 AC_DEFUN([AC_LIB_MISSING], [
@@ -635,7 +635,7 @@ AC_CONFIG_FILES( [ Makefile \
        source/libs/sdlmm/Makefile \
        source/libs/sdlmm/src/Makefile \
        source/libs/triangul/Makefile \
-       source/libs/loki/Makefile \
+       source/libs/loki-0.1.6/Makefile \
        source/libs/sdl_sound/Makefile \
        source/libs/revel/Makefile \
        source/libs/paragui/Makefile \
