--- a/source/libs/loki-0.1.6/Makefile.am
+++ b/source/libs/loki-0.1.6/Makefile.am
@@ -5,7 +5,8 @@ noinst_LTLIBRARIES 	= libloki.la
 
 vpath %.cpp $(srcdir)/src
 
-libloki_la_SOURCES	= SmallObj.cpp Singleton.cpp SmartPtr.cpp 
+# as the sources are in a subdirectory, we are grabbing them seperately ...
+nodist_libloki_la_SOURCES	= SmallObj.cpp Singleton.cpp SmartPtr.cpp 
 
-
-EXTRA_DIST= $(srcdir)include/loki/*.h $(srcdir)/src/*.cpp
+# ... which is here!
+EXTRA_DIST= $(srcdir)/include/loki/*.h $(srcdir)/src/*.cpp
