--- a/source/libs/paragui/src/core/Makefile.am
+++ b/source/libs/paragui/src/core/Makefile.am
@@ -17,7 +17,8 @@ libpgcore_la_SOURCES = \
 	pgtimerobject.cpp \
 	pgsigconvert.cpp \
 	pgcolor.cpp \
-	pgsdleventsupplier.cpp
+	pgsdleventsupplier.cpp \
+	pgsdlscreenupdater.cpp 
 
 libpgcore_la_LIBADD = \
 	$(SDL_LIBS) \
