--- a/source/libs/paragui/src/core/Makefile.in
+++ b/source/libs/paragui/src/core/Makefile.in
@@ -50,7 +50,8 @@ am_libpgcore_la_OBJECTS = physfsrwops.lo missing.lo pgdatacontainer.lo \
 	pgapplication.lo pgcolors.lo pgfilearchive.lo pgfile.lo \
 	pglog.lo pgmain.lo pgmessageobject.lo pgnavigator.lo \
 	pgrectlist.lo pgsurfacecache.lo pgtimerobject.lo \
-	pgsigconvert.lo pgcolor.lo pgsdleventsupplier.lo
+	pgsigconvert.lo pgcolor.lo pgsdleventsupplier.lo \
+	pgsdlscreenupdater.lo
 libpgcore_la_OBJECTS = $(am_libpgcore_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -241,7 +242,8 @@ libpgcore_la_SOURCES = \
 	pgtimerobject.cpp \
 	pgsigconvert.cpp \
 	pgcolor.cpp \
-	pgsdleventsupplier.cpp
+	pgsdleventsupplier.cpp \
+	pgsdlscreenupdater.cpp 
 
 libpgcore_la_LIBADD = \
 	$(SDL_LIBS) \
@@ -320,6 +322,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgnavigator.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgrectlist.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsdleventsupplier.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsdlscreenupdater.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsigconvert.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgsurfacecache.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pgtimerobject.Plo@am__quote@
