--- a/source/graphics/Makefile.in
+++ b/source/graphics/Makefile.in
@@ -118,6 +118,7 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -219,7 +220,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@ 
+AM_CXXFLAGS = @SDL_CFLAGS@ @SIGC_CFLAGS@  @LokiInclude@
 noinst_LTLIBRARIES = libgraphics.la
 libgraphics_la_SOURCES = surface.cpp blitter.cpp drawing.cpp surface2png.cpp colorizer.cpp
 libgraphics_la_LIBADD = @SDL_LIBS@ -lpng -lz
