--- a/source/network/Makefile.am
+++ b/source/network/Makefile.am
@@ -3,7 +3,7 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 INCLUDES = -I$(top_srcdir)/source/libs/paragui/include 
 
-AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@ @LIBCURL_CPPFLAGS@ -Dsgmain 
+AM_CXXFLAGS		= @SDL_CFLAGS@ @SIGC_CFLAGS@ @LIBCURL_CPPFLAGS@  @LokiInclude@ -Dsgmain 
 
 noinst_LTLIBRARIES      = libnetwork.la 
 
