--- a/source/sdl/Makefile.in
+++ b/source/sdl/Makefile.in
@@ -120,6 +120,7 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -221,9 +222,9 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@
+AM_CXXFLAGS = @SDL_CFLAGS@  @SIGC_CFLAGS@ @LokiInclude@
 AM_CFLAGS = @SDL_CFLAGS@  
-INCLUDES = -I$(src_dir) -I$(top_builddir)
+INCLUDES = -I$(src_dir) -I$(top_builddir) 
 noinst_LTLIBRARIES = libsdl.la libsdlsnd.la
 libsdl_la_SOURCES = graphics.cpp events.cpp 
 libsdl_la_LIBADD = @SDL_LIBS@ -lSDL_image -ljpeg 
