--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -117,6 +117,7 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -218,7 +219,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) -Dmaindialogs
+AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@ -Dmaindialogs
 noinst_LTLIBRARIES = libactions.la
 libactions_la_SOURCES = servicing.cpp jumpdrive.cpp selfdestruct.cpp
 libactions_la_LIBADD = @SDL_LIBS@
