--- a/source/libs/loki-0.1.6/Makefile.in
+++ b/source/libs/loki-0.1.6/Makefile.in
@@ -117,6 +117,7 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -219,6 +220,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
 noinst_LTLIBRARIES = libloki.la
+AM_CXXFLAGS = @LokiInclude@
 
 # as the sources are in a subdirectory, we are grabbing them seperately ...
 nodist_libloki_la_SOURCES = SmallObj.cpp Singleton.cpp SmartPtr.cpp 
