--- a/source/widgets/Makefile.in
+++ b/source/widgets/Makefile.in
@@ -120,6 +120,7 @@ LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
+LokiInclude = @LokiInclude@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
@@ -221,7 +222,7 @@ target_alias = @target_alias@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 MAINTAINERCLEANFILES = Makefile.in
-AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS) 
+AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 noinst_LTLIBRARIES = libwidgets.la 
 libwidgets_la_SOURCES = textrenderer.cpp bargraphwidget.cpp dropdownselector.cpp  multilistbox.cpp autoprogressbar.cpp playerselector.cpp targetcoordinatelocator.cpp textrenderer-addons.cpp 
 libwidgets_la_LIBADD = @SDL_LIBS@
