--- a/installer/asc.nsi.in
+++ b/installer/asc.nsi.in
@@ -54,17 +54,19 @@ Section "ASC main program (required)"
   ; DLLs
   File "@inst_win32_DLL_dir@/dbghelp.dll"
   File "@inst_win32_DLL_dir@/jpeg.dll"
-  File "@inst_win32_DLL_dir@/msvcp71.dll"
-  File "@inst_win32_DLL_dir@/msvcr71.dll"
+  File "@inst_win32_DLL_dir@/msvcp90.dll"
+  File "@inst_win32_DLL_dir@/msvcr90.dll"
   File "@inst_win32_DLL_dir@/ogg.dll"
   File "@inst_win32_DLL_dir@/SDL_mixer.dll"
   File "@inst_win32_DLL_dir@/smpeg.dll"
   File "@inst_win32_DLL_dir@/zlib1.dll"
-  File "@inst_win32_DLL_dir@/expat.dll"
+  File "@inst_win32_DLL_dir@/libexpat.dll"
   File "@inst_win32_DLL_dir@/libpng13.dll"
+  File "@inst_win32_DLL_dir@/libtiff-3.dll"
   File "@inst_win32_DLL_dir@/sdl.dll"
+  File "@inst_win32_DLL_dir@/README-SDL.txt"
   File "@inst_win32_DLL_dir@/vorbis.dll"
-  File "@inst_win32_DLL_dir@/in_flac.dll"
+  File "@inst_win32_DLL_dir@/libFLAC.dll"
   File "@inst_win32_DLL_dir@/SDL_image.dll"
   File "@inst_win32_DLL_dir@/sdl_sound.dll"
   File "@inst_win32_DLL_dir@/vorbisfile.dll"
@@ -73,9 +75,9 @@ Section "ASC main program (required)"
   File "@inst_win32_DLL_dir@/ssleay32.dll"
   
   ; Debug DLLs
-  File "@inst_win32_DLL_dir@/sdl_sound_d.dll"
-  File "@inst_win32_DLL_dir@/msvcr71d.dll"
-  File "@inst_win32_DLL_dir@/msvcp71d.dll"
+  ; File "@inst_win32_DLL_dir@/sdl_sound_d.dll"
+  ; File "@inst_win32_DLL_dir@/msvcr71d.dll"
+  ; File "@inst_win32_DLL_dir@/msvcp71d.dll"
 
   ; Data Files
   File "../data/dialog/asc2_dlg.zip"
